--- a/Flickr/Info.plist
+++ b/Flickr/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Save Flickr Photos To Your Photo Library</string>
 </dict>
 </plist>
